fix letterspacing

--- a/_sass/_speakers.scss
+++ b/_sass/_speakers.scss
@@ -70,7 +70,6 @@
   font-family: $font-headings;
   font-size: 1.2em;
   left: 1px;
-  letter-spacing: -1px;
   line-height: 1;
   position: absolute;
   text-align: left;
